<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lethalmaus.exampleandroidproject.imdb.TitleViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:padding="4dp"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow"
            app:tint="@color/teal_700" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back"
            android:autofillHints="@string/search"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:visible="@{viewModel.items.size > 0}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:itemBinding="@{viewModel.itemBinding}"
                app:items="@{viewModel.items}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/title_item" />
        </LinearLayout>

        <TextView
            android:id="@+id/noSearchResults"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_margin="40dp"
            android:textSize="14sp"
            android:text="@string/no_search_results"
            android:visibility="gone"
            android:padding="10dp"
            app:visible="@{viewModel.items.size == 0}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#33000000"
            android:visibility="invisible"
            android:clickable="true"
            android:focusable="true"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminateTint="@color/teal_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>